--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 allb_mc.nii.gz filter=lfs diff=lfs merge=lfs -text
+seg3.nii.gz filter=lfs diff=lfs merge=lfs -text
+allb_mc.bval filter=lfs diff=lfs merge=lfs -text
