added exampe output data

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,45 @@
 allb_mc.nii.gz filter=lfs diff=lfs merge=lfs -text
 seg3.nii.gz filter=lfs diff=lfs merge=lfs -text
 allb_mc.bval filter=lfs diff=lfs merge=lfs -text
+output/adc_allb_mc__wildbootstrap_iter_01.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/adc_allb_mc__wildbootstrap_iter_12.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/allb_mc__wildbootstrap_iter_02.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/allb_mc__wildbootstrap_iter_09.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/b0_allb_mc__wildbootstrap_iter_07.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/seg.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/b0_allb_mc__nowildbootstrap.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/b0_allb_mc__wildbootstrap_iter_03.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/adc_allb_mc__nowildbootstrap.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/adc_allb_mc__wildbootstrap_iter_04.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/adc_allb_mc__wildbootstrap_iter_06.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/allb_mc__wildbootstrap_iter_03.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/allb_mc__wildbootstrap_iter_07.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/allb_mc__wildbootstrap_iter_10.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/b0_allb_mc__wildbootstrap_iter_04.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/b0_allb_mc__wildbootstrap_iter_12.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/b0_allb_mc__wildbootstrap_iter_09.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/adc_allb_mc__wildbootstrap_iter_02.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/adc_allb_mc__wildbootstrap_iter_09.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/adc_allb_mc__wildbootstrap_iter_10.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/adc_allb_mc__wildbootstrap_iter_11.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/allb_mc__wildbootstrap_iter_11.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/allb_mc__wildbootstrap_iter_12.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/adc_allb_mc__wildbootstrap_iter_03.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/allb_mc__wildbootstrap_iter_01.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/allb_mc__wildbootstrap_iter_04.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/allb_mc__wildbootstrap_iter_08.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/b0_allb_mc__wildbootstrap_iter_06.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/b0_allb_mc__wildbootstrap_iter_11.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/allb_mc__nowildbootstrap.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/b0_allb_mc__wildbootstrap_iter_02.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/adc_allb_mc__wildbootstrap_iter_05.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/adc_allb_mc__wildbootstrap_iter_07.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/allb_mc__og.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/b0_allb_mc__wildbootstrap_iter_01.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/allb_mc__og_averaged.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/allb_mc__wildbootstrap_iter_05.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/allb_mc__wildbootstrap_iter_06.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/b0_allb_mc__wildbootstrap_iter_05.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/b0_allb_mc__wildbootstrap_iter_08.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/adc_allb_mc__wildbootstrap_iter_08.nii.gz filter=lfs diff=lfs merge=lfs -text
+output/b0_allb_mc__wildbootstrap_iter_10.nii.gz filter=lfs diff=lfs merge=lfs -text
